home store web page added

--- a/contact-us.html
+++ b/contact-us.html
@@ -447,10 +447,10 @@
 						  	<a class="nav-link active" data-bs-toggle="pill" href="#usa">USA</a>
 						</li>
 						<li class="nav-item">
-						  	<a class="nav-link" data-bs-toggle="pill" href="#dubai">Dubai</a>
-						</li>
+							<a class="nav-link" data-bs-toggle="pill" href="#pakistan">Pakistan</a>
+					  	</li>
 						<li class="nav-item">
-						  	<a class="nav-link" data-bs-toggle="pill" href="#pakistan">Pakistan</a>
+						  	<a class="nav-link" data-bs-toggle="pill" href="#uae">UAE</a>
 						</li>
 					</ul>
 					
@@ -458,20 +458,20 @@
 					<div class="tab-content text-center">
 						<div id="usa" class="container tab-pane active">
 							<br>
-							<h3 class="text-white">San Francisco</h3>
-							<p class="text-white pt-3">Jakubovo námestie 19, 811 09 Bratislava</p>
-							<img src="images/contact/location.png" alt="location">
-						</div>
-						<div id="dubai" class="container tab-pane fade">
-							<br>
-							<h3 class="text-white">San Francisco</h3>
-							<p class="text-white pt-3">Jakubovo námestie 19, 811 09 Bratislava</p>
+							<h3 class="text-white">USA</h3>
+							<p class="text-white pt-3">725 N San Vicente Blvd, Ste 800 West, West Hollywood, CA 90069</p>
 							<img src="images/contact/location.png" alt="location">
 						</div>
 						<div id="pakistan" class="container tab-pane fade">
 							<br>
-							<h3 class="text-white">San Francisco</h3>
-							<p class="text-white pt-3">Jakubovo námestie 19, 811 09 Bratislava</p>
+							<h3 class="text-white">Pakistan</h3>
+							<p class="text-white pt-3">Plot # 115-B, P.E.C.H.S Block 2, 75400, Karachi, Pakistan</p>
+							<img src="images/contact/location.png" alt="location">
+						</div>
+						<div id="uae" class="container tab-pane fade">
+							<br>
+							<h3 class="text-white">UAE</h3>
+							<p class="text-white pt-3">Floor 7, Business Central Tower WA, Dubai Media City</p>
 							<img src="images/contact/location.png" alt="location">
 						</div>
 					</div>
