--- a/evil-witch.html
+++ b/evil-witch.html
@@ -395,10 +395,10 @@
 					<h3 class="evil-witch-about-heading">Concept of Character Design</h3>
 					<p class="evil-witch-about-text">After much effort, our team found a unique character idea covering the horror feel. It was crucial to converting ideas into reality, especially when it comes to character design from scratch. But our expert designers' record proves that they can make the impossible possible. Because of the team's great effort and professional approach, a great memorable character named Evil witch, which covers a half-human body and half spider, became a reality.</p>
 				</div>
-				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
+				<div class="col-12 col-sm-12 col-md-6 col-lg-3">
 					<img src="images/case-study/evil-witch/evil-witch-first-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img1">
 				</div>
-				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
+				<div class="col-12 col-sm-12 col-md-6 col-lg-3">
 					<img src="images/case-study/evil-witch/evil-witch-second-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img2">
 				</div>
 			</div>
@@ -532,7 +532,7 @@
 				<p class="evil-witch-design-text">After sketch finalization, It had been a long way, but we were done it fast. The team started work to make the character its natural form, and within a couple of days, all things that needed to be done evil were ready as per expectation, which is provided in the sketch phase and all emotions designs.</p>
 			</div>
 		</div>
-		<div class="row justify-content-md-center py-5">
+		<div class="row justify-content-md-center py-3 py-md-3 py-lg-4">
 			<div class="col-lg-6">
 				<img src="images/case-study/evil-witch/evil-witch-about-2.png" alt="Evil Witch Design" class="img-fluid evil-witch-design-img2">
 				<p class="evil-witch-design-text2">This design shows the emotion when an evil witch is ready to attack with high tempered.</p>
@@ -542,7 +542,7 @@
 				<p class="evil-witch-design-text2">This design shows the emotion when an evil witch is doing the spiritual prayer of a demon.</p>
 			</div>
 		</div>
-		<div class="row justify-content-md-center py-5">
+		<div class="row justify-content-md-center py-3 py-md-3 py-lg-4">
 			<div class="col-lg-6">
 				<img src="images/case-study/evil-witch/evil-witch-about-4.png" alt="Evil Witch Design" class="img-fluid evil-witch-design-img4">
 				<p class="evil-witch-design-text2">This design shows the emotion when an evil witch is on focus and trying to get the idea of the situation.</p>
