--- a/placea-furniture-shop.html
+++ b/placea-furniture-shop.html
@@ -378,8 +378,8 @@
 		<div class="container">
 			<div class="row justify-content-md-center">
 				<div class="col-lg-6 v-center pt-5 pt-md-5 pt-lg-0">
-					<h1 class="text-white">AR Furniture Shop</h1>
-					<p class="text-white">Placea Place allows you to digitally 'place' furniture in your room. Everything in IKEA Place is 3D and accurate to scale, from sofas and lamps to carpets and tables, so you can make sure it's the perfect size, design, and practicality for your space.</p>
+					<h1 class="placea-banner-heading text-white">AR Furniture Shop</h1>
+					<p class="placea-banner-text text-white">Placea Place allows you to digitally 'place' furniture in your room. Everything in IKEA Place is 3D and accurate to scale, from sofas and lamps to carpets and tables, so you can make sure it's the perfect size, design, and practicality for your space.</p>
 				</div>
                 <div class="col-lg-6 v-center pt-3 pt-md-5 pt-lg-5">
                     <img src="images/case-study/placea/placea-banner.png" alt="Placea Banner" class="img-fluid placea-banner-img">
@@ -416,10 +416,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="placea-process-heading">Our Design Process</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="placea-process-text">This App has been designed in chunks; the App process is divided into seven phases, starting from requirement gathering, then teams follow the following steps.</p>
 				</div>
 			</div>
@@ -436,19 +432,19 @@
 	<section class="placea-solutions py-3 py-md-5 py-lg-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4 wow fadeInLeft">
-					<h2>The Solutions</h2>
-					<div class="common-heading text-l">
-						<h3 class="headingDiscovery">User Experience</h3>
-						<p class="DescriptionDiscovery">Enhances user experience using Augmented Reality users can set furniture on their locations, which helps the user know about the perfect look of the Place after using furniture which they like to buy for their home, office, Etc.</p>
+				<div class="col-lg-6 wow fadeInLeft">
+					<h2 class="placea-solution-main-heading">The Solutions</h2>
+					<div class="text-l">
+						<h3 class="placea-solution-heading1">User Experience</h3>
+						<p class="placea-solution-text1">Enhances user experience using Augmented Reality users can set furniture on their locations, which helps the user know about the perfect look of the Place after using furniture which they like to buy for their home, office, Etc.</p>
 					</div>
-					<div class="common-heading text-l">
-						<h3 class="headingDiscovery2">Payment Integration</h3>
-						<p class="DescriptionDiscovery">Through secure payment integration, users can buy online through multiple payment methods; availability helps the user to pay as they want.</p>
+					<div class="text-l">
+						<h3 class="placea-solution-heading2">Payment Integration</h3>
+						<p class="placea-solution-text2">Through secure payment integration, users can buy online through multiple payment methods; availability helps the user to pay as they want.</p>
 					</div>
-					<div class="common-heading text-l">
-						<h3 class="headingDiscovery2">Ease of selection</h3>
-						<p class="DescriptionDiscovery2">The App's interface supports users' ease of selecting products using the icon. There are multiple ranges of different furniture icons available on the App; by clicking them, users redirect to a specific product page where they can easily select the product they want to buy.</p>
+					<div class="text-l">
+						<h3 class="placea-solution-heading3">Ease of selection</h3>
+						<p class="placea-solution-text3">The App's interface supports users' ease of selecting products using the icon. There are multiple ranges of different furniture icons available on the App; by clicking them, users redirect to a specific product page where they can easily select the product they want to buy.</p>
 					</div>
 				</div>
 			</div>
@@ -467,10 +463,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="placea-research-heading">User Research</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="placea-research-text">This App has been designed in chunks; the App process is divided into seven phases, starting from requirement gathering, then teams follow the following steps.</p>
 				</div>
 			</div>
@@ -561,10 +553,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="placea-sketch-heading">Sketching</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="placea-sketch-text">One of the most sought-after skills in architecture is the ability to draw well. Unfortunately for people who do not have an intrinsic talent for sketching, augmented reality allows them to visualize furniture placement easily with other advance features.</p>
 				</div>
 			</div>
@@ -609,10 +597,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="placea-wireframe-heading">Wireframes</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="placea-wireframe-text">An app wireframe is a two-dimensional sketch. In the pleacea initial phase, our experts designed wireframes consisting of six sketches mentioned below in the visual form.</p>
 				</div>
 			</div>
@@ -649,35 +633,30 @@
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-lg-2 col-md-3 col-sm-6 col-12">
-					<h1 class="placea-color-heading">Visual</h1>
-	
-					</div>
-			</div>
-			<div class="row justify-content-center">
-				<div class="col-lg-8 text-center">
-				<p class="placea-color-text">To make this visual clear and vibrant, we used orange as the primary hue, while the other colors are for furniture that can be made in a variety of different shades.</p>
+				<div class="col-lg-8">
+					<h2 class="placea-color-heading">Visual</h2>
+					<p class="placea-color-text">To make this visual clear and vibrant, we used orange as the primary hue, while the other colors are for furniture that can be made in a variety of different shades.</p>
 				</div>
 			</div>
 
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
-					<img src="images/case-study/placea/placea-color-1.png" alt="Placea Color" class="img-fluid placea-color-palatte">
+					<img src="images/case-study/placea/placea-color-1.png" alt="Placea Color" class="img-fluid placea-color-palette-img">
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
-					<img src="images/case-study/placea/placea-color-2.png" alt="Placea Color" class="img-fluid placea-color-palatte">
+					<img src="images/case-study/placea/placea-color-2.png" alt="Placea Color" class="img-fluid placea-color-palette-img">
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
-					<img src="images/case-study/placea/placea-color-3.png" alt="Placea Color" class="img-fluid placea-color-palatte">
+					<img src="images/case-study/placea/placea-color-3.png" alt="Placea Color" class="img-fluid placea-color-palette-img">
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
-					<img src="images/case-study/placea/placea-color-4.png" alt="Placea Color" class="img-fluid placea-color-palatte">
+					<img src="images/case-study/placea/placea-color-4.png" alt="Placea Color" class="img-fluid placea-color-palette-img">
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
-					<img src="images/case-study/placea/placea-color-5.png" alt="Placea Color" class="img-fluid placea-color-palatte">
+					<img src="images/case-study/placea/placea-color-5.png" alt="Placea Color" class="img-fluid placea-color-palette-img">
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-2 text-center">
-					<img src="images/case-study/placea/placea-color-6.png" alt="Placea Color" class="img-fluid placea-color-palatte">
+					<img src="images/case-study/placea/placea-color-6.png" alt="Placea Color" class="img-fluid placea-color-palette-img">
 				</div>
 			</div>
 		</div>
@@ -686,13 +665,29 @@
 	
 	<!-- Start Visuals Section -->
 	<section class="placea-app-visuals py-3 py-md-3 py-lg-5 mt-5">
-		<img src="images/case-study/placea/placea-app-1.png" alt="Placea App" class="img-fluid left-side-img-1">
-		<img src="images/case-study/placea/placea-app-2.png" alt="Placea App" class="img-fluid right-side-img-1">
-		<img src="images/case-study/placea/placea-app-3.png" alt="Placea App" class="img-fluid left-side-img-2">
-		<img src="images/case-study/placea/placea-app-4.png" alt="Placea App" class="img-fluid right-side-img-2">
-		<img src="images/case-study/placea/placea-app-5.png" alt="Placea App" class="img-fluid left-side-img-3">
-		<img src="images/case-study/placea/placea-app-6.png" alt="Placea App" class="img-fluid right-side-img-3">
-		<img src="images/case-study/placea/placea-app-slider.png" alt="Placea App" class="img-fluid sliderShapeImg">
+		<div class="row justify-content-center">
+			<div class="col-sm-12 col-md-6 text-center">
+				<img src="images/case-study/placea/placea-app-1.png" alt="Placea App" class="img-fluid placea-app-img1">
+			</div>
+			<div class="col-sm-12 col-md-6 text-center">
+				<img src="images/case-study/placea/placea-app-2.png" alt="Placea App" class="img-fluid placea-app-img2">
+			</div>
+			<div class="col-sm-12 col-md-6 text-center">
+				<img src="images/case-study/placea/placea-app-3.png" alt="Placea App" class="img-fluid placea-app-img3">
+			</div>
+			<div class="col-sm-12 col-md-6 text-center">
+				<img src="images/case-study/placea/placea-app-4.png" alt="Placea App" class="img-fluid placea-app-img4">
+			</div>
+			<div class="col-sm-12 col-md-6 text-center">
+				<img src="images/case-study/placea/placea-app-5.png" alt="Placea App" class="img-fluid placea-app-img5">
+			</div>
+			<div class="col-sm-12 col-md-6 text-center">
+				<img src="images/case-study/placea/placea-app-6.png" alt="Placea App" class="img-fluid placea-app-img6">
+			</div>
+			<div class="col-sm-12 text-center">
+				<img src="images/case-study/placea/placea-app-slider.png" alt="Placea App" class="img-fluid placea-apps-img">
+			</div>
+		</div>
 	</section>
 	<!-- End Visuals Section -->
 
@@ -734,10 +729,10 @@
 			</div>
 			<div class="row pt-4">
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/app-store.png" class="img-fluid" alt="Placea App Store">
+					<img src="images/case-study/app-store.png" class="img-fluid app-store" alt="Placea App Store">
 				</div>
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/play-store.png" class="img-fluid" alt="Placea Play Store">
+					<img src="images/case-study/play-store.png" class="img-fluid play-store" alt="Placea Play Store">
 				</div>
 			</div>
 		</div>
