--- a/toys-short.html
+++ b/toys-short.html
@@ -386,12 +386,12 @@
 	<!-- End Breadcrumb Area -->
 	
 	<!-- Start About Section -->
-	<section class="toys-sort-about py-5">
+	<section class="toys-sort-about py-3 py-md-3 py-lg-4">
         <div class="container">
             <div class="row">
 				<div class="col-lg-6 v-center">
-                    <h2 class="vero-about-heading">Discover new furniture shop with Augmented Reality</h2> 
-                    <p class="vero-about-text">This is an advanced and impressive ride sharing and online shopping application which is best fit for every such activity, with a wide range of features.</p>
+                    <h2 class="toys-sort-about-heading">Discover new furniture shop with Augmented Reality</h2> 
+                    <p class="toys-sort-about-text">This is an advanced and impressive ride sharing and online shopping application which is best fit for every such activity, with a wide range of features.</p>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/case-study/toys-sort/toys-sort-discover.png" alt="Toys Sort About Image" class="img-fluid toys-sort-about-img">
@@ -408,10 +408,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="toys-sort-process-heading">Our Design Process</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="toys-sort-process-text">This App has been designed in chunks; the App process is divided into seven phases, starting from requirement gathering, then teams follow the following steps.</p>
 				</div>
 			</div>
@@ -429,10 +425,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="toys-sort-sketch-heading">Sketching</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="toys-sort-sketch-text">We followed the complete design process from thinking to sketching. Our goal was to provide a comfortable and seamless experience for the user with a thoughtful design.</p>
 				</div>
 			</div>
@@ -472,10 +464,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="toys-sort-wireframe-heading">Wireframes</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="toys-sort-wireframe-text">We then build wireframes out of the sketch we made in order to create the best user experience for your website. This helps us see different ways a page can be organized and makes sure that elements are easy to find.</p>
 				</div>
 			</div>
@@ -606,26 +594,26 @@
 	<section class="py-3 py-md-3 py-lg-4 toys-sort-prototype">
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/toys-sort/toys-sort-app-1.png" alt="Toys Sort App" class="Toys Sort APp" />
+                <div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/toys-sort/toys-sort-app-1.png" alt="Toys Sort App" class="img-fluid toys-sort-app-img1" />
 				</div>
-                <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/toys-sort/toys-sort-app-2.png" alt="Toys Sort App" class="toys-sort-app" />
+                <div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/toys-sort/toys-sort-app-2.png" alt="Toys Sort App" class="img-fluid toys-sort-app-img2" />
 				</div>
-                <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/toys-sort/toys-sort-app-3.png" alt="Toys Sort App" class="toys-sort-app" />
+                <div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/toys-sort/toys-sort-app-3.png" alt="Toys Sort App" class="img-fluid toys-sort-app-img3" />
 				</div>
-                <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/toys-sort/toys-sort-app-4.png" alt="Toys Sort App" class="toys-sort-app" />
+                <div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/toys-sort/toys-sort-app-4.png" alt="Toys Sort App" class="img-fluid toys-sort-app-img4" />
 				</div>
-                <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/toys-sort/toys-sort-app-5.png" alt="Toys Sort App" class="toys-sort-app" />
+                <div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/toys-sort/toys-sort-app-5.png" alt="Toys Sort App" class="img-fluid toys-sort-app-img5" />
 				</div>
-                <div class="col-sm-12 col-md-6">
-					<img src="images/case-study/toys-sort/toys-sort-app-6.png" alt="Toys Sort App" class="toys-sort-app" />
+                <div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/toys-sort/toys-sort-app-6.png" alt="Toys Sort App" class="img-fluid toys-sort-app-img6" />
 				</div>
-				<div class="col-sm-12">
-					<img src="images/case-study/toys-sort/toys-sort-app.png" alt="Toys Sort App" class="toys-sort-app" />
+				<div class="col-sm-12 text-center">
+					<img src="images/case-study/toys-sort/toys-sort-app.png" alt="Toys Sort App" class="img-fluid toys-sort-app-img" />
 				</div>
             </div>
         </div>
@@ -640,10 +628,10 @@
 			</div>
 			<div class="row pt-4">
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/app-store.png" class="img-fluid" alt="toys-sort App Store">
+					<img src="images/case-study/app-store.png" class="img-fluid app-store" alt="toys-sort App Store">
 				</div>
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/play-store.png" class="img-fluid" alt="toys-sort Play Store">
+					<img src="images/case-study/play-store.png" class="img-fluid play-store" alt="toys-sort Play Store">
 				</div>
 			</div>
 		</div>
