--- a/vero.html
+++ b/vero.html
@@ -379,7 +379,7 @@
 			<div class="row justify-content-md-center">
 				<div class="col-lg-6 v-center pt-5 pt-md-5 pt-lg-0">
 					<h1 class="vero-banner-heading">The Best Ridesharing and Online Store Mobile Application</h1>
-					<p>VERO is a hassle-free, one stop solution for your daily needs. Track what you want to buy, order food, or take a ride. Fit it all in a day with VERO! </p>
+					<p class="vero-banner-text">VERO is a hassle-free, one stop solution for your daily needs. Track what you want to buy, order food, or take a ride. Fit it all in a day with VERO! </p>
 				</div>
                 <div class="col-lg-6 v-center pt-3 pt-md-5 pt-lg-5">
                     <img src="images/case-study/vero/vero-banner.png" alt="Vero Banner" class="img-fluid vero-banner-img">
@@ -390,7 +390,7 @@
 	<!-- End Breadcrumb Area -->
 	
 	<!-- Start About Section -->
-	<section class="vero-about py-5">
+	<section class="vero-about py-3 py-md-3 py-lg-4">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 my-auto">
@@ -435,13 +435,9 @@
 	<!-- Start Resarch Section -->
 	<section class="vero-resarch py-3 py-md-5 py-lg-5">
 		<div class="container">
-			<div class="row justify-content-center pt-3">
+			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<h2 class="vero-research-heading">User Research</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="vero-research-text">Our user research for vero was conducted through an online survey and an interview with a targeted population so that their questions could be answered.</p>
 				</div>
 			</div>
@@ -460,10 +456,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="vero-sketch-heading">Our Sketching Process</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="vero-sketch-text">We followed the complete design process from thinking to sketching. Our goal was to provide a comfortable and seamless experience for the user with a thoughtful design.</p>
 				</div>
 			</div>
@@ -503,10 +495,6 @@
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
 					<h2 class="vero-wireframe-heading">Wireframes</h2>
-				</div>
-			</div>
-			<div class="row justify-content-center pt-3">
-				<div class="col-lg-8">
 					<p class="vero-wireframe-text">We then build wireframes out of the sketch we made in order to create the best user experience for your website. This helps us see different ways a page can be organized and makes sure that elements are easy to find.</p>
 				</div>
 			</div>
@@ -535,16 +523,12 @@
 	<!-- End Wireframe Section -->
 
 	<!-- Start Visuals Section -->
-	<section class="color-platte py-5">
+	<section class="vero-color-platte py-3 py-md-3 py-lg-4">
         <div class="container userResearchBack">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <h2 class="about-velo-app">The color palate we used</h2>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <p class="DesignProcessDescription text-center">We chose white, orange, and blue for the Vero theme. These colors are attractive to customers and help foster positive feelings about our product.</p>
+                    <h2 class="vero-color-heading">The color palate we used</h2>
+                    <p class="vero-color-text">We chose white, orange, and blue for the Vero theme. These colors are attractive to customers and help foster positive feelings about our product.</p>
                 </div>
             </div>
         </div>
@@ -555,36 +539,32 @@
 	<!-- End Visuals Section -->
 
 	<!-- Start Prototype Section -->
-	<section class="py-5 vero-prototype">
+	<section class="vero-prototype py-3 py-md-3 py-lg-4">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <h2 class="about-velo-app">Prototype</h2>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <p class="DesignProcessDescription text-center">Our prototype is ready which is based on the wireframes and user flows that created in previous sprints and they reflect the final appearance, content and functionality of the application.</p>
+                    <h2 class="vero-prototype-heading">Prototype</h2>
+                    <p class="vero-prototype-text">Our prototype is ready which is based on the wireframes and user flows that created in previous sprints and they reflect the final appearance, content and functionality of the application.</p>
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-					<img src="images/case-study/vero/vero-app-1.png" alt="Vero App" class="img-fluid vero-app-img"/>
+					<img src="images/case-study/vero/vero-app-1.png" alt="Vero App" class="img-fluid vero-app-img1"/>
 				</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-					<img src="images/case-study/vero/vero-app-2.png" alt="Vero App" class="img-fluid vero-app-img"/>
+					<img src="images/case-study/vero/vero-app-2.png" alt="Vero App" class="img-fluid vero-app-img2"/>
 				</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-					<img src="images/case-study/vero/vero-app-3.png" alt="Vero App" class="img-fluid vero-app-img"/>
+					<img src="images/case-study/vero/vero-app-3.png" alt="Vero App" class="img-fluid vero-app-img3"/>
 				</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-					<img src="images/case-study/vero/vero-app-4.png" alt="Vero App" class="img-fluid vero-app-img"/>
+					<img src="images/case-study/vero/vero-app-4.png" alt="Vero App" class="img-fluid vero-app-img4"/>
 				</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-					<img src="images/case-study/vero/vero-app-5.png" alt="Vero App" class="img-fluid vero-app-img"/>
+					<img src="images/case-study/vero/vero-app-5.png" alt="Vero App" class="img-fluid vero-app-img5"/>
 				</div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-					<img src="images/case-study/vero/vero-app-6.png" alt="Vero App" class="img-fluid vero-app-img"/>
+					<img src="images/case-study/vero/vero-app-6.png" alt="Vero App" class="img-fluid vero-app-img6"/>
 				</div>
             </div>
         </div>
@@ -592,7 +572,7 @@
 	<!-- End Prototype Section -->
 
 	<!-- Start App About Section -->
-	<section class="vero-app-about py-3 py-md-5 py-lg-5">
+	<section class="vero-app-about py-3 py-md-3 py-lg-4">
 		<div class="container">
 			<div class="row ">
 				<div class="col-lg-6 wow fadeInLeft v-center">
@@ -629,10 +609,10 @@
 			</div>
 			<div class="row pt-4">
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/app-store.png" class="img-fluid" alt="App Store">
+					<img src="images/case-study/app-store.png" class="img-fluid app-store" alt="App Store">
 				</div>
 				<div class="col-sm-12 col-md-6 text-center">
-					<img src="images/case-study/play-store.png" class="img-fluid" alt="Play Store">
+					<img src="images/case-study/play-store.png" class="img-fluid play-store" alt="Play Store">
 				</div>
 			</div>
 		</div>
