--- a/game-development.html
+++ b/game-development.html
@@ -2116,16 +2116,136 @@
 	</section>
     <!-- End Contact -->
 
-    <!--Start CTA-->
-    <section class="deliveries-section py-3 py-md-3 py-lg-5">
+    <!--Start Enquire Form-->
+	<section class="contact-page py-5">
 		<div class="container">
-			<div class="row justify-content-md-center">
-				<h2 class="common-heading">6 years of building digital products and we arejust getting started!</h2>
-				<button class="startAprojectBtn">Start A Project</button>
+			<div class="row justify-content-between">
+				<div class="col-lg-6 m-mt30 my-auto">
+					<ul class="nav nav-pills justify-content-center" role="tablist">
+						<li class="nav-item">
+						  	<a class="nav-link active" data-bs-toggle="pill" href="#usa">USA</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="pill" href="#pakistan">Pakistan</a>
+					  	</li>
+						<li class="nav-item">
+						  	<a class="nav-link" data-bs-toggle="pill" href="#uae">UAE</a>
+						</li>
+					</ul>
+					
+					<!-- Tab panes -->
+					<div class="tab-content text-center">
+						<div id="usa" class="container tab-pane active">
+							<br>
+							<h3 class="text-white">USA</h3>
+							<p class="text-white pt-3">725 N San Vicente Blvd, Ste 800 West, West Hollywood, CA 90069</p>
+							<img src="images/contact/location.png" alt="location">
+						</div>
+						<div id="pakistan" class="container tab-pane fade">
+							<br>
+							<h3 class="text-white">Pakistan</h3>
+							<p class="text-white pt-3">Plot # 115-B, P.E.C.H.S Block 2, 75400, Karachi, Pakistan</p>
+							<img src="images/contact/location.png" alt="location">
+						</div>
+						<div id="uae" class="container tab-pane fade">
+							<br>
+							<h3 class="text-white">UAE</h3>
+							<p class="text-white pt-3">Floor 7, Business Central Tower WA, Dubai Media City</p>
+							<img src="images/contact/location.png" alt="location">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="niwax23form shadow">
+						<div class="common-heading text-l">
+							<h2 class="mt0 mb0">Get in touch</h2>
+							<p class="mb50 mt10">We will catch you as early as we receive the message</p>
+						</div>
+						<div class="contact-form-card-pr contact-block-sw m0 iconin">
+							<div class="form-block niwaxform">
+								<form action="#" id="contactform" method="post">
+									<div class="fieldsets row">
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-user"></i>
+											</div>
+											<input type="text" placeholder=" " required="required" id="name" class="floating-input" name="fullname">
+											<label>Full Name *</label>
+											<div class="error-label"></div>
+										</div>
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-phone-alt"></i>
+											</div>
+											<input type="tel" placeholder=" " required="required" id="mobile_number" class="floating-input" name="mobile_number">
+											<label>Mobile Number *</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets row">
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-envelope"></i>
+											</div>
+											<input type="email" placeholder=" " required="required" id="email" class="floating-input" name="email">
+											<label>Email Address *</label>
+											<div class="error-label"></div>
+										</div>
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-file-alt"></i>
+											</div>
+											<select required="required" id="interested_in" class="floating-select" name="interested_in">
+												<option value=""></option>
+												<option value="Graphic Design">Graphic Design</option>
+												<option value="Web Design">Web Design</option>
+												<option value="App Design">App Design</option>
+												<option value="Other">Other</option>
+											</select>
+											<label>Services *</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets row">
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-building"></i>
+											</div>
+											<input type="text" placeholder=" " id="company" class="floating-input" name="company">
+											<label>Company Name (Opional)</label>
+										</div>
+										<div class="col-md-6 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-comment"></i>
+											</div>
+											<input type="text" placeholder=" " required="required" id="skype_whatsapp_no" class="floating-input" name="skype_whatsapp_no">
+											<label>Subject</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets row textareax">
+										<div class="col-md-12 form-group floating-label">
+											<div class="formicon">
+												<i class="fas fa-comment-alt"></i>
+											</div>
+											<textarea placeholder=" " required="required" id="description" class="floating-input" name="description"></textarea>
+											<label>Enter Message *</label>
+											<div class="error-label"></div>
+										</div>
+									</div>
+									<div class="fieldsets mt20">
+										<button type="submit" name="submit" class="btn btn-main bg-btn w-fit mb20"><span>Submit <i class="fas fa-chevron-right fa-icon"></i></span> <span class="loader"></span></button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
-    <!--End CTA-->
+	<!--End Enquire Form-->
+
     <!-- Start Footer -->
     <footer>
         <div class="footer-row2">
