--- a/our-process.html
+++ b/our-process.html
@@ -399,7 +399,7 @@
 	<!--Start Process-->
 	<section class="service-block pad-tb">
 		<div class="container">
-			<!-- <div class="row justify-content-center">
+			<div class="row justify-content-center">
 				<div class="col-lg-8">
 					<div class="common-heading ptag">
 						<span>Process</span>
@@ -407,8 +407,8 @@
 						<p>FUTUREALITI, work on all of our Web and App development projects in a very professional way with creative moralistic methods to provide accurate results to our clients. Our target is to convert your Ideas into Reality.</p>
 					</div>
 				</div>
-			</div> -->
-			<!-- <div class="row my-0 my-md-5">
+			</div>
+			<div class="row my-0 my-md-5">
                 <div class="col-md-4">
                     <div class="card our-process-card">
                         <div class="card-body">
@@ -490,61 +490,58 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
 			
 		</div>
 	</section>
 	<!--End Process-->
 
-	<!--Start CTA-->
-	<section class="cta-area pad-tb">
+	<!--Start Enquire Form-->
+	<section class="contact-page py-5">
 		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-8">
-				   <div class="common-heading">
-					  <span class="text-white">Let's work together</span>
-					  <h2 class="text-white">We Love to Listen to Your Requirements</h2>
-				   </div>
-				</div>
-			 </div>
-			<div class="row justify-content-center">
-				<div class="col-lg-6 my-auto">
-					<div class="media mt15 justify-content-center">
-						<div class="icondive">
-							<img src="images/icons/call.svg" alt="icon">
+			<div class="row justify-content-between">
+				<div class="col-lg-6 m-mt30 my-auto">
+					<ul class="nav nav-pills justify-content-center" role="tablist">
+						<li class="nav-item">
+						  	<a class="nav-link active" data-bs-toggle="pill" href="#usa">USA</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="pill" href="#pakistan">Pakistan</a>
+					  	</li>
+						<li class="nav-item">
+						  	<a class="nav-link" data-bs-toggle="pill" href="#uae">UAE</a>
+						</li>
+					</ul>
+					
+					<!-- Tab panes -->
+					<div class="tab-content text-center">
+						<div id="usa" class="container tab-pane active">
+							<br>
+							<h3 class="text-white">USA</h3>
+							<p class="text-white pt-3">725 N San Vicente Blvd, Ste 800 West, West Hollywood, CA 90069</p>
+							<img src="images/contact/location.png" alt="location">
 						</div>
-						<div class="media-body getintouchinfo">
-							<a href="tel:123456790" class="text-white">+91-123 4567 890 <span class="text-white">Mon-Fri 9am - 6pm</span>
-							</a> 
+						<div id="pakistan" class="container tab-pane fade">
+							<br>
+							<h3 class="text-white">Pakistan</h3>
+							<p class="text-white pt-3">Plot # 115-B, P.E.C.H.S Block 2, 75400, Karachi, Pakistan</p>
+							<img src="images/contact/location.png" alt="location">
 						</div>
-					</div>
-					<div class="media mt15 justify-content-center">
-						<div class="icondive">
-							<img src="images/icons/whatsapp.svg" alt="icon">
-						</div>
-						<div class="media-body getintouchinfo">
-							<a href="tel:123456790" class="text-white">+91-123 4567 890 <span class="text-white">Mon-Fri 9am - 6pm</span></a>
-						</div>
-					</div>
-					<div class="media mt15 justify-content-center">
-						<div class="icondive">
-							<img src="images/icons/mail.svg" alt="icon"></div>
-						<div class="media-body getintouchinfo">
-							<a href="mailto:info@website.com" class="text-white">info@website.com <span class="text-white">Online Support</span></a>
-						</div>
-					</div>
-					<div class="media mt15 justify-content-center">
-						<div class="icondive">
-							<img src="images/icons/skype.svg" alt="icon">
-						</div>
-						<div class="media-body getintouchinfo">
-							<a href="skype:niwax.company?call" class="text-white">Niwax.Company<span class="text-white">Visit Our Office</span></a>
+						<div id="uae" class="container tab-pane fade">
+							<br>
+							<h3 class="text-white">UAE</h3>
+							<p class="text-white pt-3">Floor 7, Business Central Tower WA, Dubai Media City</p>
+							<img src="images/contact/location.png" alt="location">
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<div class="niwax23form shadow">
+						<div class="common-heading text-l">
+							<h2 class="mt0 mb0">Get in touch</h2>
+							<p class="mb50 mt10">We will catch you as early as we receive the message</p>
+						</div>
 						<div class="contact-form-card-pr contact-block-sw m0 iconin">
 							<div class="form-block niwaxform">
 								<form action="#" id="contactform" method="post">
@@ -628,7 +625,7 @@
 			</div>
 		</div>
 	</section>
-	<!--End CTA-->
+	<!--End Enquire Form-->
 
 	<!-- Start Footer -->
 	<footer>
